--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,46 +21,32 @@ anyhow = "1.0"
 async-trait = "0.1"
 base64 = "0.21.2"
 bitvec = "1"
-bloomfilter = "1.0.9"
-boring = "4.2.0"
-boring-sys = "4.2.0"
 byte_string = "1.0"
 bytes = "1"
 chacha20poly1305 = "0.10"
 cidr-utils = "0.5.10"
-clap = "4"
 crc32fast = "1.3.2"
 domain_matcher = {git = "https://github.com/darsvador/DomainMatcher", rev = "8df5a46746d90900d"}
 env_logger = "0.10"
-foreign-types-shared = "0.3.1"
 futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
 generic-array = "0.14.7"
-hkdf = "0.12"
 hmac = "0.12"
 log = "0.4"
 md-5 = "0.10.5"
-prost = "0.11"
-protobuf = {version = "3.0.1", features = ["with-bytes"]}
 rand = {version = "0.8", features = ["small_rng"]}
 regex = "1.7.3"
 serde = {version = "1.0", features = ["derive"]}
-sha-1 = "0.10.1"
 sha2 = "0.10.6"
-socket2 = {version = "0.4.7", features = ["all"]}
 spin = "0.9.6"
 tokio = {version = "1.26", features = ["net", "io-util", "macros", "sync"]}
-tokio-boring = "4.2.0"
 tokio-tungstenite = {version = "0.20", features = ["stream", "handshake"], default-features = false}
 tokio-util = {version = "0.7", features = ["codec", "net"]}
 toml = "0.5"
-tonic = "0.9"
 uuid = {version = "1.3", features = ["std", "v4"]}
 #cidr_matcher={git="https://github.com/Qv2ray/CIDRMatcher"}
-brotli = "3.3.4"
 gentian = "0.1.8"
-h2 = "0.3.20"
 http = "0.2"
-hyper = {version = "0.14.27", features = ["http1", "http2", "client", "server"]}
+hyper = {version = "0.14.27", features = ["http1", "client", "server"]}
 libc = "0.2"
 once_cell = "1"
 tower = "0.4.13"
@@ -70,13 +56,6 @@ codegen-units = 1
 lto = true
 opt-level = 3
 strip = true
-
-[build-dependencies]
-protobuf-codegen = "3.2.0"
-tonic-build = "0.10"
-
-[target.'cfg(windows)'.dependencies]
-schannel = "0.1.21"
 
 [target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
 openssl-probe = "0.1.5"
